# Gem-Poacher

./: .coveragerc  .gitignore  .pylintrc  CREDITS.md  README.md  pyproject.toml  tasks.py
documentation/: architechture.md  architecture.md  changelog.md  requirements_specification.md  testing.md  user_manual.md  work_time_log.md
documentation/misc/: kolikkorosvo.py  package_diagram.puml
laskarit/viikko2/: README.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/: kassapaate.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: matkakortti.md  monopoli.md
src/: game_logic.py  game_loop.py  game_state.py  generate_config.py  image_handler.py  initialize_database.py  level.py  main.py  renderer.py  text_box.py  ui_manager.py  ui_text.py
src/config/: config.ini
src/database/: database_connection.py  score_service.py
src/game_engine/: __init__.py  clock.py  constants.py  event_queue.py  game_logic.py  game_loop.py  game_state.py
src/sprites/: __init__.py  enemy.py  gem.py  player.py
src/tests/: game_logic_test.py  game_state_test.py  level_test.py
src/tests/databse/: score_service_test.py
src/tests/game_engine/: clock_test.py  event_queue_test.py  game_logic_test.py  game_loop_test.py  game_state_test.py
src/tests/sprites/: enemy_test.py  gem_test.py  player_test.py
src/tests/utilities/: config_manger_test.py  score_manager_test.py  score_test.py
src/ui/: renderer.py  text_box.py  text_object.py  ui_manager.py  ui_text.py
src/utilities/: config_manager.py  constants.py  image_handler.py  score.py  score_manager.py
