[tool.poetry]
name = "gem-poacher"
version = "0.5.0"
description = ""
authors = ["hojahoja"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.1"
invoke = "^2.2.0"
pytest-subtests = "^0.13.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
coverage = "^7.6.7"
pylint = "^3.3.1"
autopep8 = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
